@startuml

!theme mirco from .

class Location {
  lid: string
  name: string
}

class SoftwareGroup {
  name: string
  description: string
}

class Host {
  location_id
  software_group_id
  name: string
  ipadress: inet
  description: <<actiontext>>
}

class Server {
  ...
}
class SoftwareInterface {
  ...
}

Location "1" --> "*" Host
SoftwareGroup "1" --> "*" Host
Host "1" -- "*" Server
Host "1" -- "*" SoftwareInterface
@enduml
